feat: testing get disciplina method