@@ -30,7 +30,7 @@ public class BoletimService {
 
     public List<BoletimDTO> findById(Long id){
         Optional<BoletimEntity> boletim = boletimRepository.findById(id);
-        return boletim.stream().map(BoletimDTO::new).toList();
+        return boletim.stream().map(BoletimDTO::new).collect(Collectors.toList());
     }
 
     public List<BoletimDTO> buscarPorDisciplina(Long idDisciplina){
